Move classes to ConsoleGrid folder

--- a/src/guest-list-solution/Guestlist.UI.Console.Library/Guestlist.UI.Console.Library.csproj
+++ b/src/guest-list-solution/Guestlist.UI.Console.Library/Guestlist.UI.Console.Library.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="ConsoleGrid" Version="1.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ConsoleMenu\" />
+  </ItemGroup>
+
 </Project>
